[fix]homepageプロパティを設定

--- a/apps/package.json
+++ b/apps/package.json
@@ -20,6 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "https://themakest.github.io/react_movie_search_app",
   "eslintConfig": {
     "extends": [
       "react-app",
